--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,18 +1,22 @@
 ---
 layout: default
 ---
+
+{% include nav.html %}
+
 <div class="page-content">
   <div class="wrapper">
-    <article class="post">
+    <article class="post" itemscope itemtype="http://schema.org/WebPage">
 
       <header class="page-header">
-        <h1 class="page-title">{{ page.title }}</h1>
+        <h1 class="page-title" itemprop="name headline">{{ page.title }}</h1>
       </header>
 
-      <div class="post-content">
+      <div class="page-content" itemprop="mainContentOfPage">
         {{ content }}
       </div>
-
     </article>
   </div>
 </div>
+
+{% include footer.html %}
