--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,14 @@
 ---
 layout: default
 ---
+
+{% include nav.html %}
+
 <div class="page-content">
   <div class="wrapper">
     <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
-      <header class="page-header">
+      <header class="page-header post-header">
         <h1 class="page-title post-title" itemprop="name headline">{{ page.title }}</h1>
         <p class="post-meta">
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>{% if page.author %} by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
@@ -36,3 +39,4 @@ layout: default
   </div>
 </div>
 
+{% include footer.html %}
