Add category pages

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -6,7 +6,7 @@ layout: default
 
 <div class="page-content">
   <div class="wrapper">
-    <article class="post" itemscope itemtype="http://schema.org/WebPage">
+    <article class="page" itemscope itemtype="http://schema.org/WebPage">
 
       <header class="page-header">
         <h1 class="page-title" itemprop="name headline">{{ page.title }}</h1>
