--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,6 +12,12 @@ layout: default
         <h1 class="page-title post-title" itemprop="name headline">{{ page.title }}</h1>
         <p class="post-meta">
           <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%B %-d, %Y" }}</time>{% if page.author %} by <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}
+          {% assign category = page.categories | first %}
+          {% if category %}
+          <span class="category">
+          In <a href="/{{category}}">{{category | replace: '-', ' ' }}</a>
+          </span>
+          {% endif %}
         </p>
       </header>
 
