--- a/src/_includes/nav.html
+++ b/src/_includes/nav.html
@@ -1,9 +1,9 @@
 <nav class="top-nav">
   <div class="wrapper">
     <a href="{{ site.baseurl }}/" class="home">
-      <img src="/assets/logo.png"
-          srcset="/assets/logo.png 1x,
-          /assets/logo@2x.png 2x"
+      <img src="{{ site.baseurl }}/assets/logo.png"
+          srcset="{{ site.baseurl }}/assets/logo.png 1x,
+          {{ site.baseurl }}/assets/logo@2x.png 2x"
           alt="FUNC DA WORLD">
     </a>
     <div class="nav">
