Fix last incorrect paths

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -138,7 +138,7 @@ body {
   overflow-y: auto;
   width: 60%;
   background: #501984;
-  background-image: url('/assets/slice.png');
+  background-image: url('../assets/slice.png');
   background-repeat: no-repeat;
   background-size: 100% auto;
   background-position: bottom center;
