--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -8,6 +8,11 @@
 
   <link rel="icon" type="image/png" href="{{ "/assets/icon.png" | prepend: site.baseurl }}">
 
+  <link rel="apple-touch-icon" href="touch-icon-iphone.png">
+  <link rel="apple-touch-icon" sizes="48x48" href="{{ "/assets/icon.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="857x857" href="{{ "/assets/square.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="1712x1712" href="{{ "/assets/square@2x.png" | prepend: site.baseurl }}">
+
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" media="print" href="{{ "/css/print.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cabin:400,400i|Inconsolata|Montserrat:700">
