--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,10 +6,9 @@
 
 
 // Our variables
-$base-font-family: "Cabin", "Arial", sans-serif;
-$display-font-family: "Montserrat", "Arial", sans-serif;
-$monospace-font-family: "Inconsolata", monospace;
-$base-font-size:   18px;
+$base-font-family: "Helvetica Neue", "Segoe UI", sans-serif;
+$monospace-font-family: "Courier", monospace;
+$base-font-size:   16px;
 $base-font-weight: 400;
 $small-font-size:  90%;
 $base-line-height: 1.6;
@@ -25,7 +24,7 @@ $grey-color-light: #f0f0f0;
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    $base-font-size * 45;
+$content-width:    $base-font-size * 50;
 
 $on-palm:             600px;
 $on-laptop:           800px;
