--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,7 +6,7 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", "Segoe UI", sans-serif;
+$base-font-family: "Helvetica Neue", "Helvetica", "Segoe UI", sans-serif;
 $monospace-font-family: "Courier", monospace;
 $base-font-size:   16px;
 $base-font-weight: 400;
