--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -6,9 +6,9 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", "Helvetica", "Segoe UI", sans-serif;
-$monospace-font-family: "Courier", monospace;
-$base-font-size:   16px;
+$base-font-family: "Fira Sans", "Helvetica Neue", "Helvetica", "Segoe UI", sans-serif;
+$monospace-font-family: "Fira Mono", monospace;
+$base-font-size:   15px;
 $base-font-weight: 400;
 $small-font-size:  90%;
 $base-line-height: 1.6;
@@ -24,7 +24,7 @@ $grey-color-light: #f0f0f0;
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    $base-font-size * 50;
+$content-width:    $base-font-size * 55;
 
 $on-palm:             600px;
 $on-laptop:           800px;
