--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -10,8 +10,9 @@ body {
   list-style-type: none;
   margin-left: 0;
   padding: 0 1rem;
-  font-weight: 600;
-  font-size: 80%;
+  font-weight: 400;
+  font-size: 90%;
+  letter-spacing: 0.02em;
 
   li {
     display: block;
@@ -104,7 +105,6 @@ body {
   p {
     display: block;
     margin-top: 1.6rem;
-    font-weight: 600;
     text-align: left;
     text-transform: uppercase;
     font-size: 110%;
@@ -157,7 +157,7 @@ body {
 
 .post-list .post-meta {
   display: block;
-  font-size: 80%;
+  font-size: 90%;
   font-weight: 600;
   text-transform: uppercase;
   letter-spacing: .02em;
@@ -189,6 +189,7 @@ body {
     }
     .post-meta {
       margin: .8rem 0 0;
+      letter-spacing: 0.02em;
     }
     .post-meta time {
       color: $brand-color;
@@ -207,7 +208,7 @@ body {
 .tags {
   list-style-type: none;
   margin: .4em 0 0 0;
-  font-size: 80%;
+  font-size: 90%;
   font-family: $monospace-font-family;
   font-weight: 600;
 
@@ -322,7 +323,7 @@ body {
 }
 
 .page-title {
-  font-size: 28px;
+  font-size: 200%;
   margin-bottom: $spacing-unit / 4;
   font-weight: 600;
 
@@ -344,9 +345,9 @@ body {
   font-size: 90%;
 }
 .post .post-meta {
-  font-size: 80%;
-  font-weight: 600;
+  font-size: 90%;
   text-transform: uppercase;
+  letter-spacing: 0.02em;
   
   .category {
     margin-top: .5rem;
