--- a/src/_layouts/category.html
+++ b/src/_layouts/category.html
@@ -26,7 +26,7 @@ layout: default
               {% assign category = post.categories | first %}
               {% if category %}
               <span class="category">
-                In <a href="/{{category}}">{{category | replace: '-', ' ' }}</a>
+                <a href="/{{category}}">{{category | replace: '-', ' ' }}</a>
               </span>
               {% endif %}
             </div>
