--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -30,13 +30,13 @@ body {
 
 @include media-query($on-laptop) {
   body {
-    font-size: 14px;
+    font-size: $base-font-size - 1;
   }
 }
 
 @include media-query($on-palm) {
   body {
-    font-size: 13px;
+    font-size: $base-font-size - 2;
   }
 }
 
@@ -96,17 +96,21 @@ li {
  * Headings
  */
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
   line-height: inherit;
   margin-bottom: 1.6rem;
   font-weight: 600;
 }
 
 h2 {
-  text-transform: uppercase;
+  font-size: 150%;
 }
 
 h3 {
+  font-size: 100%;
+}
+
+h4, h5, h6 {
+  font-size: 90%;
 }
 
 /**
@@ -117,7 +121,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: #771fc1;
+    color: #986598;
   }
 
   &:hover {
@@ -156,7 +160,15 @@ strong {
 pre,
 code {
   font-family: $monospace-font-family;
+  font-size: $base-font-size - 1;
   line-height: inherit;
+
+  @include media-query($on-laptop) {
+    font-size: $base-font-size - 2;
+  }
+  @include media-query($on-palm) {
+    font-size: $base-font-size - 3;
+  }
 }
 
 pre {
