--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -12,18 +12,14 @@ body {
   padding: 0 1rem;
   font-weight: 400;
   font-size: 90%;
-  letter-spacing: 0.02em;
 
   li {
     display: block;
     float: left;
   }
   a {
-    color: #fff;
-    text-transform: uppercase;
+    color: $text-color;
     padding: 8px 16px;
-
-    color: $grey-color-light;
 
     &:hover {
       color: #fff;
@@ -34,6 +30,8 @@ body {
 
 .top-nav {
   background: $text-color;
+  font-family: $secondary-font-family;
+  text-transform: uppercase;
 
   .wrapper {
     height: 48px;
@@ -59,6 +57,7 @@ body {
       padding: 8px 16px;
       height: 64px;
       line-height: 48px;
+      color: #fff;
     }
   }
 }
@@ -69,140 +68,10 @@ body {
   }
 }
 
-
-.home-page {
-  position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.title-pane {
-  position: absolute;
-  left: 0;
-  top: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-
-  width: 40%;
-  height: 100%;
-  background: $brand-color;
-  color: #222;
-
-  .wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1 1 auto;
-    padding: 2rem;
-  }
-
-  h1 {
-    text-indent: -9999px;
-    position: absolute;
-  }
-
-  p {
-    display: block;
-    margin-top: 1.6rem;
-    text-align: left;
-    text-transform: uppercase;
-    font-size: 110%;
-    color: #fff;
-  }
-}
-
-@media screen and (orientation: landscape) and (max-height: 400px) {
-  .title-pane p {
-    font-size: 100%;
-  }
-}
-
-.home-page .nav {
-  flex: 0 0 auto;
-  padding: 1rem 0;
-}
-
-.post-list-pane {
-  position: absolute;
-  right: 0;
-  top: 0;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  padding: $grid-spacing 0 0 0;
-  height: 100%;
-  overflow-y: auto;
-  width: 60%;
-  background: #501984;
-  background-image: url('../assets/slice.png');
-  background-repeat: no-repeat;
-  background-size: 100% auto;
-  background-position: bottom center;
-
-  .wrapper {
-    max-width: 100%;
-    padding: 0;
-  }
-
-}
-
-.home-page .post-list {
-  display: flex;
-  flex-wrap: wrap;
-  list-style-type: none;
-  padding: 0;
-  margin: 0 0 0 $grid-spacing;
-}
-
 .post-list .post-meta {
   display: block;
-  font-size: 90%;
-  font-weight: 600;
-  text-transform: uppercase;
-  letter-spacing: .02em;
-  margin-bottom: .8rem;
-}
-
-.home-page .post-list > li {
-  display: block;
-  flex: 0 1 25%;
-  margin-bottom: $grid-spacing;
-
-  a {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-    padding: $grid-spacing;
-    margin-right: $grid-spacing;
-    color: $text-color;
-
-    .title {
-      display: block;
-      font-weight: 600;
-    }
-    .excerpt {
-      flex: 1 1 auto;
-      display: block;
-      margin: .8rem 0 0;
-    }
-    .post-meta {
-      margin: .8rem 0 0;
-      letter-spacing: 0.02em;
-    }
-    .post-meta time {
-      color: $brand-color;
-    }
-
-    &:hover {
-      text-decoration: none;
-
-      time, .title {
-        text-decoration: underline;
-      }
-    }
-  }
+  font-family: $secondary-font-family;
+  color: #888;
 }
 
 .tags {
@@ -242,7 +111,6 @@ body {
     position: static;
     width: 100%;
     height: auto;
-    background-attachment: fixed;
   }
 }
 
@@ -308,9 +176,12 @@ body {
 .page-content {
   margin-bottom: $spacing-unit 0;
 }
-.category-excerpt {
-  font-style: italic;
-  margin-bottom: 3.2rem;
+
+
+.category {
+  &:before {
+    content: ' | ';
+  }
 }
 
 .page-header {
@@ -323,15 +194,15 @@ body {
 }
 
 .page-title {
-  font-size: 200%;
-  margin-bottom: $spacing-unit / 4;
+  font-size: 38px;
+  margin: ($spacing-unit * 2) 0 $spacing-unit;
   font-weight: 600;
 
   @include media-query($on-laptop) {
-    font-size: 28px;
+    font-size: 32px;
   }
   @include media-query($on-palm) {
-    font-size: 24px;
+    font-size: 30px;
   }
 }
 
@@ -340,23 +211,35 @@ body {
   background: #ffea33;
 }
 
-.post-excerpt {
-  font-style: italic;
-  font-size: 90%;
+.category-excerpt,
+.site-description {
+  margin-bottom: $spacing-unit * 2;
+  text-align: center;
+  font-size: 125%;
 }
+
+.category-excerpt,
+.site-description,
 .post .post-meta {
+  margin: $spacing-unit 0 ($spacing-unit * 2);
+}
+
+.post-meta {
+  font-family: $secondary-font-family;
   font-size: 90%;
+  color: #888;
   text-transform: uppercase;
-  letter-spacing: 0.02em;
-  
+}
+
+.post .post-meta {
+  font-size: 100%;
+
   .category {
-    margin-top: .5rem;
-    display: block;
+    margin-bottom: .5rem;
   }
 }
 
-.post-list.archive,
-.category-page .post-list {
+.post-list {
   list-style-type: none;
   margin-left: 0;
 
@@ -365,11 +248,11 @@ body {
   }
 
   .title {
-   text-transform: none;
+    margin-bottom: 0;
   }
-  .title,
   .excerpt {
-    margin-bottom: .8rem;
+    margin: .8rem 0;
+    font-style: italic;
   }
 }
 
@@ -441,24 +324,12 @@ figcaption,
 
     h1 {
       font-size: 200%;
-      text-transform: uppercase;
       position: static;
       text-indent: 0;
     }
     img {
       display: none;
     }
-  }
-  .home-page .nav {
-    display: none;
-  }
-  .home-page .post-list-pane {
-    position: static;
-    width: auto;
-    height: auto;
-  }
-  .home-page .post-list > li {
-    flex-basis: 100%;
   }
   .top-nav {
     display: none;
