--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -45,5 +45,6 @@ $on-very-big-screen:  1800px;
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import
         "base",
-        "layout"
+        "layout",
+        "home"
 ;
