Reduce post list heading size

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -73,6 +73,10 @@ body {
   color: #888;
 }
 
+.archive.post-list .title {
+  font-size: 125%;
+}
+
 .tags {
   list-style-type: none;
   margin: .4em 0 0 0;
