Align category page styling

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -73,7 +73,7 @@ body {
   color: #888;
 }
 
-.archive.post-list .title {
+.post-list .title {
   font-size: 125%;
 }
 
@@ -204,7 +204,6 @@ body {
   font-size: 125%;
 }
 
-.category-excerpt,
 .post .post-meta {
   margin: $spacing-unit 0 ($spacing-unit * 2);
 }
