Add projects page

--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -102,14 +102,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  font-size: 150%;
+  font-size: 130%;
 }
 
-h3 {
-  font-size: 125%;
-}
-
-h4, h5, h6 {
+h3, h4, h5, h6 {
   font-size: 100%;
 }
 
