--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -181,7 +181,7 @@ body {
 }
 
 .page-title {
-  font-size: 38px;
+  font-size: 200%;
   margin: ($spacing-unit * 2) 0 $spacing-unit;
   font-weight: 600;
 
