Add lambdaworld post

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -284,6 +284,10 @@ figcaption,
     }
 }
 
+.twitter-tweet {
+  margin: 0 auto;
+}
+
 @media print {
   .home-page .title-pane {
     position: static;
