--- a/src/_sass/_home.scss
+++ b/src/_sass/_home.scss
@@ -1,5 +1,6 @@
 .home {
   background: $brand-color;
+  background-image: linear-gradient( 45deg, darken($brand-color, 20%), $brand-color );
   height: 100%;
   color: #fff;
   text-align: center;
