--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -47,7 +47,7 @@ body {
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: 1.6em;
+  margin-bottom: ($base-line-height * 1rem);
 }
 
 
@@ -97,7 +97,7 @@ li {
  */
 h1, h2, h3, h4, h5, h6 {
   line-height: inherit;
-  margin-bottom: 1.6rem;
+  margin-bottom: ($base-line-height * 1rem);
   font-weight: 600;
 }
 
@@ -156,27 +156,22 @@ strong {
 pre,
 code {
   font-family: $monospace-font-family;
-  font-size: $base-font-size - 2;
+  font-size: $base-font-size - 3;
   line-height: inherit;
 
   @include media-query($on-laptop) {
-    font-size: $base-font-size - 3;
+    font-size: $base-font-size - 4;
   }
   @include media-query($on-palm) {
-    font-size: $base-font-size - 4;
+    font-size: $base-font-size - 5;
   }
 }
 
 pre {
-  padding: .8rem 1.6rem;
-  margin-bottom: 1.6rem;
+  padding: .8rem ($base-line-height * 1rem);
+  margin-bottom: ($base-line-height * 1rem);
   overflow-x: auto;
   border-left: 5px solid $grey-color-light;
-}
-
-p code {
-  background: $grey-color-light;
-  padding: .1em .2em;
 }
 
 @include media-query($on-laptop) {
@@ -206,7 +201,7 @@ table td {
 }
 
 hr {
-  margin: 1.6em 0 2.4em;
+  margin: ($base-line-height * 1rem) 0 2.4em;
   line-height: 0;
   border-style: none none dotted;
   color: #fff;
