Render unpublished on serve

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -184,9 +184,11 @@ body {
   }
 }
 
-.draft {
-  color: #222;
-  background: #ffea33;
+.draft .title {
+  a {
+    color: red;
+    background: #ffea33;
+  }
 }
 
 .category-excerpt {
