Start on Tech Talk blog post

--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -65,6 +65,17 @@ body {
   }
 }
 
+.footnotes {
+  font-size: 90%;
+
+  hr {
+    display: none;
+  }
+  p {
+    font-style: italic;
+  }
+}
+
 @media screen and (max-width: $on-palm) {
   .top-nav .nav ul a {
     padding: .5rem;
