Add section on generating diagrams

--- a/src/_sass/_syntax-highlighting.scss
+++ b/src/_sass/_syntax-highlighting.scss
@@ -92,5 +92,5 @@ code span.re { color: #445588; } /* RegionMarker */
 code span.in { color: #009999; } /* Information */
 code span.wa { color: #d01040; } /* Warning */
 code span.al { color: #d01040; font-weight: bold; } /* Alert */
-code span.er { color: #d01040; text-decoration: underline; } /* Error */
+code span.er { color: #d01040; } /* Error */
 code span { color: #222; } /* Normal */
