--- a/src/_layouts/category.html
+++ b/src/_layouts/category.html
@@ -17,10 +17,18 @@ layout: default
         <ul class="post-list">
           {% for post in site.categories[page.category] %}
           <li{% if post.published == false %} class="draft"{% endif %}>
-            <h2 class="title">
-              <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
-            </h2>
-            <p class="excerpt">{{ post.excerpt }}</p>
+            <div class="title-and-excerpt">
+                <h2 class="title">
+                    <a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a>
+                </h2>
+                <p class="excerpt">{{ post.excerpt }}</p>
+            </div>
+            <time>
+                <a href="{{ post.url | prepend: site.baseurl }}">
+                    <span class="day">{{ post.date | date: '%b %d'}}</span>
+                    <span class="year">{{ post.date | date: '%Y'}}</span>
+                </a
+            </time>
           </li>
         {% endfor %}
         </ul>
