--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -2,7 +2,11 @@
 
   <div class="wrapper">
     <p><a class="rss-subscribe" href="{{ "/feed.xml" | prepend: site.baseurl }}">Subscribe via RSS</a></p>
-    <p class="copyright">Copyright &copy; 2015 - {{ 'now' | date: "%Y" }} Oskar Wickström</p>
+    <p class="copyright">
+    Copyright &copy; 2015-{{ 'now' | date: "%Y" }} Oskar Wickström
+    &mdash;
+    <a href="https://raw.githubusercontent.com/owickstrom/func-da-world/master/LICENSE">License</a>
+    </p>
   </div>
 
 </footer>
