--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -30,13 +30,13 @@ body {
 
 @include media-query($on-laptop) {
   body {
-    font-size: $base-font-size - 1;
+    font-size: $base-font-size - 2;
   }
 }
 
 @include media-query($on-palm) {
   body {
-    font-size: $base-font-size - 2;
+    font-size: $base-font-size - 4;
   }
 }
 
@@ -99,6 +99,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: inherit;
   margin-bottom: ($base-line-height * 1rem);
   font-weight: 600;
+  letter-spacing: -0.02em;
 }
 
 h2 {
@@ -117,7 +118,7 @@ a {
   text-decoration: none;
 
   &:visited {
-    color: #986598;
+    color: #666666;
   }
 
   &:hover {
@@ -156,20 +157,12 @@ strong {
 pre,
 code {
   font-family: $monospace-font-family;
-  font-size: $base-font-size - 3;
   line-height: inherit;
-
-  @include media-query($on-laptop) {
-    font-size: $base-font-size - 4;
-  }
-  @include media-query($on-palm) {
-    font-size: $base-font-size - 5;
-  }
 }
 
 pre {
-  padding: 0 ($base-line-height * 1rem);
-  margin-bottom: ($base-line-height * 1rem);
+  padding: ($base-line-height * 0.5rem);
+  margin: 0;
   overflow-x: auto;
 }
 
