--- a/src/_sass/_home.scss
+++ b/src/_sass/_home.scss
@@ -1,6 +1,5 @@
-.home {
+div.home {
   background: $brand-color;
-  background-image: linear-gradient( 45deg, darken($brand-color, 20%), $brand-color );
   height: 100%;
   color: #fff;
   text-align: center;
@@ -39,11 +38,14 @@
 
   .site-description {
     margin: $spacing-unit auto $spacing-unit*4;
-    font-size: 125%;
+    font-size: 150%;
     text-align: justify;
-    color: lighten($brand-color, 20%);
+    color: #fff;
   }
 
+  .nav {
+    font-size: 125%;
+  }
   .nav ul {
     li {
       display: inline-block;
@@ -70,7 +72,6 @@
       font-size: 100%;
     }
     .nav {
-      font-size: 80%;
     }
   }
 
