--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -25,24 +25,18 @@ body {
 
 
 .top-nav {
-  background: $text-color;
+  background: $brand-color;
+  box-shadow: 0px 1px 1px desaturate(darken($brand-color, 10%), 30%);
   font-family: $secondary-font-family;
-  font-size: 80%;
 
   .wrapper {
     height: 48px;
   }
   .home {
-    background: $brand-color;
-    background-image: linear-gradient( 45deg, darken($brand-color, 10%), $brand-color );
     display: block;
     height: 100%;
     float: left;
     padding: 8px;
-
-    &:hover {
-      background-image: linear-gradient( 45deg, $brand-color, lighten($brand-color, 10%) );
-    }
 
     img {
       display: block;
@@ -79,6 +73,30 @@ body {
 @media screen and (max-width: $on-palm) {
   .top-nav .nav ul a {
     padding: .5rem;
+  }
+}
+@media screen and (max-width: 400px) {
+  .top-nav .wrapper {
+    height: auto;
+  }
+  .top-nav .home {
+    display: block;
+    height: 48px;
+    margin: 0;
+    float: none;
+    text-align: center;
+
+    img {
+      display: inline-block;
+    }
+  }
+  .top-nav .nav ul,
+  .top-nav .nav ul li {
+    float: none;
+  }
+  .top-nav .nav ul {
+    margin: 0;
+    padding: 0;
   }
 }
 
@@ -184,9 +202,10 @@ body {
 }
 
 .page-title {
-  font-size: 200%;
+  font-size: 275%;
   margin: ($spacing-unit * 2) 0 $spacing-unit;
   font-weight: 600;
+  font-family: $secondary-font-family;
 
   @include media-query($on-laptop) {
   }
@@ -211,6 +230,7 @@ body {
 .post-meta {
   margin: $spacing-unit 0 ($spacing-unit * 2);
   color: $grey-color;
+  font-family: $secondary-font-family;
 
   a {
     color: inherit;
@@ -239,11 +259,14 @@ body {
   }
   .title {
     margin-bottom: 0;
+    font-weight: 600;
+    letter-spacing: -0.02em;
   }
   time {
     flex: 0 0 auto;
     text-align: right;
     padding-left: 1em;
+    font-family: $secondary-font-family;
 
     a {
         color: $text-color;
@@ -262,6 +285,10 @@ body {
   }
 }
 
+div.sourceCode {
+  margin-bottom: ($base-line-height * 1rem);
+  box-shadow: 1px 1px 1px desaturate(darken($code-background-color, 20%), 50%);
+}
 
 .index-heading {
   position: absolute;
