--- a/src/_sass/_base.scss
+++ b/src/_sass/_base.scss
@@ -161,7 +161,7 @@ code {
 
 pre {
   padding: ($base-line-height * 0.5rem);
-  margin: 0;
+  margin: 0 0 ($base-line-height * 1rem);
   overflow-x: auto;
 }
 
