--- a/src/_sass/_layout.scss
+++ b/src/_sass/_layout.scss
@@ -223,7 +223,7 @@ body {
 
 .category-excerpt {
   margin-bottom: $spacing-unit * 2;
-  text-align: center;
+  text-align: left;
   font-size: 125%;
 }
 
